# Hampfh

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  diesel.toml
apps/server/: Cargo.toml  Makefile  README.md
apps/server/migrations/2022-06-11-071322_setup_db/: up.sql
apps/server/migrations/2022-06-19-175458_disqualification/: down.sql  up.sql
apps/server/migrations/2022-07-15-210149_score_to_wins/: down.sql
apps/server/migrations/2022-07-20-204658_optional_match_errors/: down.sql  up.sql
apps/server/src/: cli.rs  main.rs
apps/server/src/api/: mod.rs  server.rs
apps/server/src/api/models/: match_model.rs  submission_model.rs  turn_model.rs  user_model.rs
apps/server/src/api/routes/: challenge.rs  match_data.rs  matches.rs  mod.rs  ping.rs  routes.rs
apps/server/src/api/services/: core.rs
apps/server/src/backend/: schema.rs  server.rs
apps/server/src/backend/models/: submission_model.rs  user_model.rs
apps/server/src/backend/services/: match_data.rs  (+3 more)
apps/server/src/cli/: cli.rs  generate.rs  match.rs  match_make.rs  mod.rs
apps/server/src/external_related/: readme_factory.rs  repo_updater.rs  string_escape.rs
apps/server/src/game/: ascii_graphics.rs  board.rs  entry_point.rs  execute_move.rs  game.rs  game_state.rs  graphics.rs  initialize_game.rs  load_script.rs  load_script_with_validation.rs  map_mirroring.rs  mod.rs  path_find.rs  player.rs  turn.rs  validation.rs
apps/server/src/match_maker/: constants.rs  match_executor.rs  match_make.rs  mmr.rs  mod.rs  placements.rs  regenerate_markdown_files.rs  scheduler.rs
(+252 files in other folders)
