[package]
name = "hampfh-github-profile"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Game specific dependencies
rlua = "0.19.2"
pathfinding = "3.0.12"

# Web dependencies
actix-rt = "1.0"
actix-web = "4"
actix-files = "0.6.2"
futures = "0.3"

rand = "0.8.5"

thread-id = "4.0.0"
libc = "0.2.126"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"

reqwest = { version = "0.11.10", features = ["blocking"] }
# For compiling on linux
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
gif = "0.12.0"
clap = { version = "4.5.8", features = ["derive", "cargo"] }
terminate-thread = "0.3.1"
mlua = { version = "0.9.9", features = ["send", "luau"] }
